[gd_scene load_steps=20 format=2]

[ext_resource path="res://plane_pack/planes/plane_3/plane_3_green.png" type="Texture" id=1]
[ext_resource path="res://plane_pack/planes/plane_3/plane_3_red.png" type="Texture" id=2]
[ext_resource path="res://plane_pack/planes/plane_3/plane_3_blue.png" type="Texture" id=3]
[ext_resource path="res://plane_pack/planes/plane_3/plane_3_yellow.png" type="Texture" id=4]
[ext_resource path="res://Boss.gd" type="Script" id=5]
[ext_resource path="res://EnemyBullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://plane_pack/explosion_effect/keyframes/explosion_02.png" type="Texture" id=7]
[ext_resource path="res://plane_pack/explosion_effect/keyframes/explosion_06.png" type="Texture" id=8]
[ext_resource path="res://plane_pack/explosion_effect/keyframes/explosion_09.png" type="Texture" id=9]
[ext_resource path="res://plane_pack/explosion_effect/keyframes/explosion_03.png" type="Texture" id=10]
[ext_resource path="res://plane_pack/explosion_effect/keyframes/explosion_07.png" type="Texture" id=11]
[ext_resource path="res://plane_pack/explosion_effect/keyframes/explosion_01.png" type="Texture" id=12]
[ext_resource path="res://plane_pack/explosion_effect/keyframes/explosion_08.png" type="Texture" id=13]
[ext_resource path="res://plane_pack/explosion_effect/keyframes/explosion_04.png" type="Texture" id=14]
[ext_resource path="res://sounds/Depth Charge Short-SoundBible.com-1303947570.wav" type="AudioStream" id=15]
[ext_resource path="res://plane_pack/explosion_effect/keyframes/explosion_05.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "plane_red",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "plane_yellow",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "plane_green",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "plane_blue",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 68.974, 33.8924 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ null, ExtResource( 12 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Boss" type="Area2D" groups=["boss"]]
script = ExtResource( 5 )
bullet = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 1 )
animation = "plane_yellow"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.148832, 0.0942001 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.105121, -0.105112 )
scale = Vector2( 6.79034, 3.26534 )

[node name="BulletPosition" type="Position2D" parent="."]
position = Vector2( -69.375, 11.6852 )

[node name="BulletSpawn" type="Timer" parent="."]
wait_time = 1.5

[node name="Explosion" type="AnimatedSprite" parent="."]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 3 )

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[connection signal="area_entered" from="." to="." method="_on_Boss_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Boss_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="BulletSpawn" to="." method="_on_BulletSpawn_timeout"]
